--- a/index.html
+++ b/index.html
@@ -66,15 +66,18 @@
                         durante otros 5000 millones de años más. Sin embargo, después de que la fusión del hidrógeno en su núcleo se haya detenido, el Sol sufrirá cambios
                         importantes y se convertirá en una gigante roja. La Tierra y otros cuerpos orbitan alrededor del Sol.</p> 
                 </div>
-                <div class="video-planeta">
+                <div class="video-planeta" id="prueba">
                     <button class="ver-video">Ver video <i class="fa-solid fa-play"></i></button>
                 </div>
                 <div class="popup-container" id="popup-sol">
-                    <div class="popup"></div>
+                    <i class="fa-solid fa-xmark" id="prueba2"></i>
+                    <iframe class="video" src="https://www.youtube.com/embed/LkaLfbuB_6E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
-
+        
     </section>
+    
+    <script src="index.js"></script>
 </body>
 </html>
